[package]
name = "markdown_viewer_improved"
version = "0.2.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
eframe = { version = "0.31.1", features = ["persistence"] } # Or latest
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["image"] } # For image loading
pulldown-cmark = { version = "0.10.0", default-features = false, features = ["html"] } # Enable features as needed
rfd = "0.15.3" # Or latest
syntect = "5.2.0" # For syntax highlighting
lazy_static = "1.4.0" # For syntect setup
open = "5.1.2" # For opening links
log = "0.4.21" # Optional: for logging errors
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] } # For image loading

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
winapi = { version = "0.3.9", features = ["wincon"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

# If you want nicer logging (optional)
env_logger = "0.11.3"